	PR c++/84015 - ICE with class deduction and auto template parm.

* pt.c (rewrite_template_parm): Use tf_partial in first tsubst.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@257979 138bc75d-0d04-0410-961f-82ee72b054a4